--- a/Damir_Masalimov/lesson-3/homework/advanced_homework/task-manager.css
+++ b/Damir_Masalimov/lesson-3/homework/advanced_homework/task-manager.css
@@ -44,11 +44,6 @@ div, span {
 	display: flex;
 }
 /*Containers for task-manager*/
-.inline_block {
-	box-sizing: border-box;
-	display: inline-block;
-	position: relative;
-}
 
 .date_container {
 	width: 210px;
@@ -65,13 +60,17 @@ div, span {
 .projects_container {
 	width: 210px;
 	height: 322px;
-	background: darkred;
+	background: #dadada;
+	display: flex;
+	flex-direction: column;
 }
 
 .task_container {
 	width: 425px;
 	height: 322px;
-	background: darkgreen;
+	background: #ffffff;
+	display: flex;
+	flex-direction: column;
 }
 
 
@@ -124,11 +123,12 @@ div, span {
 }
 
 .percent__circle {
-	flex-grow: 6;
+	height: 185px;
+	width: 211.5px;
 }
 
 .percent__lable {
-	flex-grow: 1;
+	height: 30px;
 	background: #dbdbdb;
 	position: relative;
 }
@@ -154,4 +154,64 @@ div, span {
 	width: 425px;
 	height: 100%;
 	background: #4cd729;
+}
+
+.project__lable {
+	width: 100%;
+	height: 42px;
+	background: #a0a0a0;
+	box-shadow: 0px 1px 0px 0px #939393;
+	position: relative;
+}
+
+.project__lable__text {
+	font-family: OpenSans;
+	color:  #3e3e3e;
+	font-size: 16px;/* Приближение из-за подстановки шрифтов */
+	font-weight: 300;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+/* Блок кода отвечающий за круглую диаграмму */
+.in-progress__circle, .done__circle {
+	width: 110px;
+    height: 110px;
+    margin: auto;
+}
+.prec{
+    top: 24px;
+    position: relative;
+    font-size: 36px;
+}
+
+.prec:after{
+    content:'%';
+}
+
+.circle{
+    position: relative;
+    top: 10px;
+    left: 10px;
+    text-align: center;
+    width: 90px;
+    height: 90px;
+    border-radius: 100%;
+    background-color: #ededed;
+}
+
+.active-border{
+    position: relative;
+    text-align: center;
+    width: 110px;
+    height: 110px;
+    border-radius: 100%;
+
+    background-color: #3397d4;
+    background-image:
+        linear-gradient(91deg, transparent 50%, #d6d6d6 50%),
+        linear-gradient(90deg, #d6d6d6 50%, transparent 50%);
+    
 }
